# zksnark-rs

./: .gitignore  Cargo.toml  README.md  shell.nix
cli/: Cargo.toml  simple.json
cli/src/: main.rs
pkg/: package.json  zksnark.d.ts  zksnark.js  zksnark_bg.wasm
src/: encryption.rs  field.rs  lib.rs  qap.rs
src/field/: mod.rs  z251.rs
src/groth16/: coefficient_poly.rs  cubic_share.zk  dummy_poly.rs  fr.rs  interpolated_poly.rs  mod.rs  quad_share.zk
src/groth16/circuit/: arithmetic_circuit.rs  ast.rs  builder.rs  dummy_rep.rs  mod.rs
src/groth16/circuit/ast/: mod.rs
src/groth16/circuit/ast/lexer/: mod.rs  zk_token.rs
src/groth16/circuit/builder/: mod.rs  tests.rs  types.rs  word64.rs
test_programs/: 8bit_comparator.zk  deg_15.zk  lispesque_cubic.zk  lispesque_quad.zk  simple.zk
