[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
zksnark = { version = "^0", path = ".." }
rustc-serialize = "0.3.24"
bincode = {version = "~0.6.0", features = ["rustc-serialize"]}